src/snapshots/interpreter__parser__tests__known_macros@=_macro.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\parskip=\\medskipamount`"
---
stmts:
  - KnownMacro:
      name: parskip
      args:
        - Token: Assign
        - Macro:
            name: medskipamount
      is_alt: false
errors: []

