src/snapshots/interpreter__parser__tests__known_macros@accent2.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `asf\\H {o}fs af`"
---
stmts:
  - Text: asf
  - KnownMacro:
      name: H
      args:
        - Block:
            - Text: o
      is_alt: false
  - Text: fs
  - Token: Space
  - Text: af
errors: []

