src/snapshots/interpreter__parser__tests__known_macros@def1.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\def\\a{part}{not part}`"
---
stmts:
  - KnownMacro:
      name: def
      args:
        - Macro:
            name: a
        - Block:
            - Text: part
      is_alt: false
  - Block:
      - Text: not
      - Token: Space
      - Text: part
errors: []

